[project]
name = "daily-briefing-agent"
version = "0.1.0"
description = "AI Daily Summary Bot Development Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "packages/aidb-ai",
    "packages/aidb-tui"
]

[tool.uv]
dev-dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP", "S", "C4", "PIE", "SIM", "RET", "ARG", "PTH", "ERA", "PL", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["aidb_ai", "aidb_tui"]
